--- a/New_Playground.ipynb
+++ b/New_Playground.ipynb
@@ -191,9 +191,9 @@
     "        if distance == 0:\n",
     "            reward -= 125\n",
     "        if any(np.array_equal(self.agent_pos, obs) for obs in self.dynamic_obstacles):\n",
-    "            reward -= 15  # Penalty for colliding with a static obstacle\n",
+    "            reward -= 15  # Penalty for colliding with a Dynamic obstacle\n",
     "        if any(np.array_equal(self.agent_pos, obs) for obs in self.static_obstacles):\n",
-    "            reward -= 15  # Penalty for colliding with a static obstacle\n",
+    "            reward -= 15  # Penalty for colliding with a Static obstacle\n",
     "        if np.any(self.agent_pos == 0) or np.any(self.agent_pos >= self.grid_size - 0.5):\n",
     "            reward -= 5  # Penalty for hitting the wall/boundary\n",
     "            \n",
@@ -204,7 +204,6 @@
     "        return np.array_equal(self.agent_pos, self.goal_pos)\n",
     "    \n",
     "    def _get_obs(self):\n",
-    "        # Ensure that the observation is a dictionary with keys matching the observation space\n",
     "        agent_state = np.array([self.agent_pos[0], self.agent_pos[1]], dtype=np.float32)\n",
     "        dynamic_obstacle_states = np.array([(ob['angle'], ob['distance']) for ob in self.dynamic_obstacles] + \n",
     "                                           [np.zeros(2) for _ in range(self.max_dynamic_obstacles - len(self.dynamic_obstacles))],\n",
@@ -223,13 +222,13 @@
     "            self.fig, self.ax = plt.subplots()\n",
     "            self.ax.set_xlim(0, self.grid_size)\n",
     "            self.ax.set_ylim(0, self.grid_size)\n",
-    "            # Initialize markers with initial positions\n",
+    "            # Initializing markers with initial positions\n",
     "            self.agent_marker, = self.ax.plot(self.agent_pos[0], self.agent_pos[1], 'go', markersize=10)\n",
     "            self.goal_marker, = self.ax.plot(self.goal_pos[0], self.goal_pos[1], 'rx', markersize=10)\n",
     "            self.dynamic_markers = [self.ax.plot(ob['current'][0], ob['current'][1], 'mo', markersize=5)[0] for ob in self.dynamic_obstacles]\n",
     "            self.static_markers = [self.ax.plot(ob[0], ob[1], 'bs', markersize=5)[0] for ob in self.static_obstacles]\n",
     "        else:\n",
-    "            # Ensure all positions are sequences\n",
+    "            # Ensuring All positions are sequences\n",
     "            self.agent_marker.set_data([self.agent_pos[0]], [self.agent_pos[1]])\n",
     "            self.goal_marker.set_data([self.goal_pos[0]], [self.goal_pos[1]])\n",
     "            for marker, obstacle in zip(self.dynamic_markers, self.dynamic_obstacles):\n",
@@ -239,10 +238,9 @@
     "        \n",
     "        clear_output(wait=True)\n",
     "        display(self.fig)\n",
-    "        plt.pause(0.01)  # Add a short pause to update the plot\n",
+    "        plt.pause(0.01)  # A short pause to update the plot\n",
     "    \n",
     "    def reset(self, **kwargs):\n",
-    "    # You can optionally handle the 'seed' or other kwargs if needed\n",
     "        if 'seed' in kwargs:\n",
     "            np.random.seed(kwargs['seed'])\n",
     "\n",
@@ -251,7 +249,7 @@
     "        self.dynamic_obstacles = self._init_dynamic_obstacles()\n",
     "        self.static_obstacles = self._init_static_obstacles()\n",
     "        self.current_step = 0\n",
-    "        return self._get_obs(), {}  # Ensure this returns a single dictionary"
+    "        return self._get_obs(), {}"
    ]
   },
   {
@@ -326,7 +324,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assuming 'env' is your environment and 'model' is your RL model\n",
     "render_callback = RenderCallback(env, render_freq=1)"
    ]
   },
